# rust_parallel2018

./: README.md  index.html
examples/: .gitignore
examples/ffi/: Cargo.toml  LICENSE
examples/ffi/.cargo/: config
examples/ffi/src/: main.rs
examples/laplace/: Cargo.toml
examples/laplace/src/: main.rs
examples/laplace/src/ray/: compute.rs  compute_unsafe.rs  mod.rs
examples/laplace/src/sequential/: compute.rs  compute_unsafe.rs  mod.rs
examples/laplace/src/threaded/: compute.rs  compute_unsafe.rs  mod.rs
examples/laplace/src/threadpool/: compute.rs  compute_unsafe.rs
examples/mem/: Cargo.toml
examples/mem/cpp/: Makefile  mem.cpp
examples/mem/src/: main.rs
examples/pi/: Cargo.toml  README.md
examples/pi/c/: Makefile  pi.c
examples/pi/src/: main.rs
slides/: .gitignore  Makefile  slides.adoc  write.sh
slides/images/: laplace_for.tex  laplace_task.tex
