[package]
name = "laplace"
version = "0.1.0"
authors = ["Jens Breitbart <jbreitbart@gmail.com>", "Stefan Lankes <lankes@eonerc.rwth-aachen.de>"]

[dependencies]
time = "*"
rayon = "1.0"
crossbeam = "0.3.*"
scoped_threadpool = "0.1.*"

# The release profile, used for `cargo build --release`.
[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
